--- a/src/styles/blocks/docs.css
+++ b/src/styles/blocks/docs.css
@@ -3,7 +3,7 @@
   border-bottom: #dad9d8 1px solid;
 
   &__attention {
-     color: #b8312f;
+    color: #b8312f;
   }
 
   &__list {
@@ -15,13 +15,24 @@
   }
 
   &__item {
-    flex: 0 1 32%;
-    padding: 32px;
-    margin: 0 0 20px 0;
+    flex-grow: 1;
+    flex-shrink: 1;
+    padding: 16px;
+    margin-bottom: 20px;
     box-shadow: 0 0 9px rgba(174, 174, 174, 0.75);
     border: 1px solid rgba(72, 128, 237, 0.15);
     background-color: rgba(86, 145, 241, 0);
     font-weight: 700;
+
+    @media screen and (min-width: 768px) {
+      flex-grow: 0;
+      flex-basis: 348px;
+      padding: 32px;
+    }
+
+    @media screen and (min-width: 1024px) {
+      flex-basis: 302px;
+    }
 
     a {
       display: flex;
@@ -32,8 +43,12 @@
   &__item-icon {
     flex: 0 0 26px;
     text-align: center;
-    margin-right: 28px;
+    margin-right: 14px;
     color: #5691f1;
+
+    @media screen and (min-width: 768px) {
+      margin-right: 28px;
+    }
 
     i {
       width: 53px;
