--- a/src/styles/main-doc.css
+++ b/src/styles/main-doc.css
@@ -13,23 +13,26 @@
 @import "blocks/about-main.css";
 
 
-body {
-}
-
 .header__in {
-  width: var(--max-content-width);
+  max-width: var(--max-content-width);
   margin: 0 auto;
+  padding: 0 10px;
+
+  @media screen and (min-width: 768px) {
+    padding: 0 20px;
+  }
 }
-
-
 
 .main {
   min-height: calc(100vh - 155px - 100px);
+  padding: 0 20px;
 }
 
 .main__in {
-  width: var(--max-content-width);
+  max-width: 960px;
   margin: 0 auto;
+  /*padding: 0 10px;*/
+
 }
 
 .footer {
