--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -2,6 +2,13 @@
   position: relative;
   overflow-x: hidden;
 
+  &__main {
+    display: flex;
+    align-items: flex-start;
+    justify-content: left;
+    width: 100%;
+  }
+
   &__slide {
     position: absolute;
     left: 0;
@@ -15,9 +22,9 @@
   }
 
   &__markers {
-    /*display: flex;*/
-    /*flex-flow: row nowrap;*/
-    /*justify-content: center;*/
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
     display: block;
     text-align: center;
     margin-top: 50px;
