--- a/src/styles/blocks/about-main.css
+++ b/src/styles/blocks/about-main.css
@@ -1,84 +1,74 @@
 .about {
-    &__main {
-        padding-right: 20px;
-
-        & > h2 {
-            font-size: 22px;
-            font-weight: bold;
-            margin-bottom: 30px;
-        }
-
-        p {
-            padding-bottom: 30px;
-            margin-bottom: 0;
-
-        }
+  &__main {
+    & > h2 {
+      font-size: 22px;
+      font-weight: bold;
+      margin-bottom: 30px;
     }
 
-    &__history {
-        ul {
-            display: flex;
-            flex-flow: row wrap;
-            list-style-type: none;
-        }
-        
-        li {
-            flex: 1 1 auto;
-            position: relative;
+    p {
+      padding-bottom: 30px;
+      margin-bottom: 0;
+    }
+  }
 
-            @media screen and (min-width: 768px) {
-                padding: 0 20px;
-                flex: 1 1 150px;
-            }
+  &__history {
+    ul {
+      display: flex;
+      flex-flow: row wrap;
+      list-style-type: none;
 
-            &:first-child {
-              padding-left: 0;
-            }
-
-
-            &::after {
-                @media screen and (min-width: 768px) {
-                    position: absolute;
-                    content: '';
-                    display: block;
-                    background-color: #e7e8ea;
-                    height: 100%;
-                    width: 1px;
-                    right: 0;
-                    top: 0;
-                }       
-            }
-            h4 {
-                font-weight: bold;
-
-            }
-            p {
-                font-size: 12px;
-            }
-        }
+      @media screen and (min-width: 768px) {
+        margin: 0 -20px;
+      }
     }
 
-    &__partners {
-        margin: 0 auto;
+    li {
+      flex: 1 1 auto;
+      position: relative;
 
-        h2 {
-            margin-top: 30px;
-            font-size: 22px;
-            font-weight: bold;
-            text-align: center;
+      @media screen and (min-width: 768px) {
+        border-right: 1px solid #e7e8ea;
+        flex: 1 1 150px;
+        padding: 0 20px;
+
+        &:last-child {
+          border-right: none;
         }
+      }
 
-        &-img {
-            margin: 40px auto 50px;
-            background-repeat: no-repeat;
-            background-size: contain;
-            background-position: center center;
-            height: 600px;
-            background-image: url(../images/partners.jpg);
+      h4 {
+        font-weight: bold;
+      }
 
-            @media screen and (max-width: 768px) {
-                background-image: url(../images/partners_mobile.png);
-            }
-         }
+      p {
+        font-size: 12px;
+        padding-bottom: 10px;
+      }
     }
+  }
+
+  &__partners {
+    margin: 0 auto;
+
+    h2 {
+      margin-top: 30px;
+      font-size: 22px;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    &-img {
+      margin: 40px auto 50px;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center center;
+      height: 600px;
+      background-image: url(../images/partners.jpg);
+
+      @media screen and (max-width: 768px) {
+        background-image: url(../images/partners_mobile.png);
+      }
+    }
+  }
 }
