--- a/src/styles/blocks/providers-page.css
+++ b/src/styles/blocks/providers-page.css
@@ -1,4 +1,3 @@
-
 .providers-page {
   margin: 0 auto;
 
@@ -17,10 +16,14 @@
 
   &__back {
     text-align: center;
-    font-size: 22px;
+    font-size: 16px;
     font-weight: bold;
     text-transform: uppercase;
     margin-bottom: 56px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 22px;
+    }
 
     a {
       color: #4880ed;
@@ -29,6 +32,10 @@
     i {
       margin-top: -4px;
       margin-right: 15px;
+
+      @media screen and (max-width: 767px) {
+        display: none;
+      }
     }
 
     span {
@@ -38,7 +45,6 @@
     }
   }
 }
-
 
 .providers-list {
   padding-top: 50px;
@@ -65,7 +71,7 @@
 
   &__item-tooltip {
     padding: 28px 50px;
-    background-color: rgba(255, 255, 255, .9);
+    background-color: rgba(255, 255, 255, 0.9);
     opacity: 0;
     display: none;
     font-size: 16px;
@@ -74,7 +80,7 @@
     left: 50%;
     transform: translateX(-50%);
     width: 326px;
-    box-shadow: 0 0 26px 0 rgba(0, 0, 0, .1);
+    box-shadow: 0 0 26px 0 rgba(0, 0, 0, 0.1);
     text-align: left;
     z-index: 10;
 
@@ -84,7 +90,7 @@
     }
 
     &::before {
-      content: '';
+      content: "";
       display: block;
       position: absolute;
       bottom: 100%;
@@ -124,7 +130,6 @@
   }
 }
 
-
 .partners {
   display: flex;
   flex-flow: row wrap;
@@ -135,40 +140,39 @@
   }
 
   &__item {
-     width: 250px;
-     padding: 0 20px;
-     margin: 0 10px;
-     margin-bottom: 20px;
-     
-     @media screen and (max-width: 600px) {
+    width: 250px;
+    padding: 0 20px;
+    margin: 0 10px;
+    margin-bottom: 20px;
+
+    @media screen and (max-width: 600px) {
       flex: 1 1 auto;
       padding: 0;
     }
-     
 
-     img {
-       text-align: center;
-       display: block;
-       margin: 0 auto;
-       width: 200px;
-     }
+    img {
+      text-align: center;
+      display: block;
+      margin: 0 auto;
+      width: 200px;
+    }
 
-     &-title {
-        font-size: 16px;
-        font-weight: 700;
-        margin-bottom: 10px;
-        line-height: 1.2em;
-     }
+    &-title {
+      font-size: 16px;
+      font-weight: 700;
+      margin-bottom: 10px;
+      line-height: 1.2em;
+    }
 
-     &-video {
-         margin-bottom: 20px;
-     }
+    &-video {
+      margin-bottom: 20px;
+    }
 
-     p {
-       font-size: 14px;
-       line-height: 20px;
-       text-align: left;
-       margin-bottom: 20px;
-     }
+    p {
+      font-size: 14px;
+      line-height: 20px;
+      text-align: left;
+      margin-bottom: 20px;
+    }
   }
 }
