--- a/src/styles/blocks/header.css
+++ b/src/styles/blocks/header.css
@@ -1,29 +1,25 @@
-.header {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
-  width: 100%;
-  padding: 25px 0;
-  background-image: url('../images/header-bg.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  align-items: center;
+@import "../variables.css";
 
-  @media screen and (min-width: 767px) {
-    align-items: left;
+.header {
+  padding: 25px 20px;
+  text-align: center;
+
+  @media screen and (min-width: 768px) {
+    text-align: left;
   }
+
   &__in {
     margin: 0 auto;
+    max-width: var(--max-content-width);
   }
 
   &__head {
     font-size: 0;
-     position: relative;
+    position: relative;
   }
 
   &__main {
     margin: 0 auto;
-    text-align: left;
 
     &-link {
       display: inline-block;
@@ -31,9 +27,10 @@
       font-size: 18px;
       color: #4880ed;
     }
+
     h1 {
       font-size: 16px;
-      @media screen and (min-width: 767px) {
+      @media screen and (min-width: 768px) {
         font-size: 20px;
       }
     }
@@ -41,8 +38,8 @@
     h2 {
       margin: 70px 0 26px 0;
       font-size: 30px;
-      
-      @media screen and (min-width: 767px) {
+
+      @media screen and (min-width: 768px) {
         align-items: left;
         font-size: 45px;
       }
@@ -57,13 +54,30 @@
     display: block;
     text-align: center;
 
-    @media screen and (min-width: 767px) {
+    @media screen and (min-width: 768px) {
       display: inline-block;
-      margin-right: 90px;  
+      margin-right: 90px;
     }
 
     img {
       height: 40px;
+    }
+  }
+
+  &__back {
+    margin-top: 40px;
+  }
+
+  &__back-link {
+    display: inline-block;
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #4880ed;
+
+    i {
+      margin: -3px 10px 0 0;
+      transform: rotate(180deg);
     }
   }
 }
