--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -25,13 +25,13 @@ body {
 }
 
 .header {
-  padding: 20px 20px 50px;
-  text-align: center;
+  background-image: url("../images/header-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 
-  @media screen and (min-width: 767px) {
+  @media screen and (min-width: 768px) {
     height: 370px;
     overflow: hidden;
-    text-align: left;
   }
 }
 
