--- a/src/styles/tabs.css
+++ b/src/styles/tabs.css
@@ -25,6 +25,10 @@
     flex-flow: row wrap;
     justify-content: center;
     list-style: none;
+
+    @media screen and (min-width: 768px) {
+      justify-content: space-around;
+    }
   }
 
   &__nav-item {
