Add reibr to both maps

--- a/src/styles/blocks/search.css
+++ b/src/styles/blocks/search.css
@@ -107,6 +107,7 @@
     font-weight: 700;
     font-size: 12px;
     cursor: pointer;
+    padding-right: 10px;
 
     &_active {
       font-weight: 400;
