--- a/src/styles/main-divisions.css
+++ b/src/styles/main-divisions.css
@@ -7,6 +7,7 @@
 @import "blocks/nav.css";
 @import "blocks/header.css";
 @import "blocks/search.css";
+@import "blocks/form.css";
 
 .map-page {
   display: flex;
