--- a/src/styles/blocks/providers-page.css
+++ b/src/styles/blocks/providers-page.css
@@ -133,16 +133,16 @@
 .partners {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
 
   @media screen and (max-width: 860px) {
     justify-content: space-around;
   }
 
   &__item {
-    width: 250px;
-    padding: 0 20px;
-    margin: 0 10px;
+    width: 280px;
+    padding: 0 25px;
+    margin: 0 15px;
     margin-bottom: 20px;
 
     @media screen and (max-width: 600px) {
